# jimp-egzamin

./: CMakeLists.txt  README.md
15-16A/: CMakeLists.txt  LE.cpp  LE.h  ListaTablic.cpp  ListaTablic.h  main.cpp
15-16A/1/: CMakeLists.txt  main.cpp
15-16A/2/: CMakeLists.txt  main.cpp
15-16A/3/: CMakeLists.txt  main.cpp
15-16A/4/: CMakeLists.txt  main.cpp
15-16B/1/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
15-16B/2/: CMakeLists.txt  Mapa.cpp  Mapa.h  main.cpp
15-16B/3/: CMakeLists.txt  Wielomian.cpp  Wielomian.h  main.cpp
15-16B/4/: CMakeLists.txt  Simple.cpp  Simple.h  main.cpp
15-16C/1/: CMakeLists.txt  main.cpp
15-16C/2/: CMakeLists.txt  main.cpp
15-16C/3/: CMakeLists.txt  main.cpp
15-16C/4/: CMakeLists.txt  main.cpp
texy/: A.tex  B.tex  C.tex  examples.tex
